# GameProject

./: AnteprimeMenu.odg  AttackBonus.cpp  AttackBonus.h  BlueFlag.cpp  BlueFlag.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Checkpoint.cpp  Checkpoint.h  Coin.cpp  Coin.h  Collision.cpp  Collision.h  DefenceBonus.cpp  DefenceBonus.h  Descrizione progetto.odt  Door.cpp  Door.h  DoorFactory.cpp  DoorFactory.h  Enemy.cpp  Enemy.h  EnemyFactory.cpp  EnemyFactory.h  Explosive.cpp  Explosive.h  FlyingBehaviour.cpp  FlyingBehaviour.h  FlyingEnemy.cpp  FlyingEnemy.h  GameCharacter.cpp  GameCharacter.h  GameHero.cpp  GameHero.h  GroundEnemy.cpp  GroundEnemy.h  Gui.cpp  Gui.h  HealthPill.cpp  (+66 more)
Map/: background.txt  backgroundLevel1.txt  caveBackgroundL1.txt  caveGroundL1.txt  caveObjectsL1.txt  ground.txt  groundLevel1.txt  objectsLevel1  undergroundBackgroundL1.txt  undergroundGroundL1.txt  undergroundObjectsL1.txt  xyz.txt
cmake_modules/: FindSFML.cmake
test/: CMakeLists.txt  EnemyTest.cpp  GameHeroFixture.cpp  GameHeroTest.cpp  WeaponTest.cpp  runAllTests.cpp
test/lib/googletest-master/: CMakeLists.txt
test/lib/googletest-master/googlemock/: CMakeLists.txt
test/lib/googletest-master/googlemock/docs/: CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
test/lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-generated-matchers.h.pump  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
test/lib/googletest-master/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googletest-master/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
test/lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-generated-actions_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc
test/lib/googletest-master/googletest/: CMakeLists.txt
test/lib/googletest-master/googletest/docs/: advanced.md  faq.md
test/lib/googletest-master/googletest/include/gtest/: gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h
test/lib/googletest-master/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h  gtest-type-util.h.pump
test/lib/googletest-master/googletest/samples/: sample1_unittest.cc  sample5_unittest.cc  sample8_unittest.cc
test/lib/googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
test/lib/googletest-master/googletest/test/: googletest-listener-test.cc  googletest-output-test-golden-lin.txt  googletest-param-test-test.cc  googletest-printers-test.cc  gtest-typed-test_test.cc  gtest_unittest.cc
